# cfasuite

./: .gitignore  Cargo.toml  Makefile  README.md  birthday_bot.py  employee.py  go.mod  go.sum  index.ts  init.sh  main.go  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sqlite_db.py  tailwind.config.js  typescript.sh
client/: bun.lockb  index.ts  package.json
client/core/: AktrContext.ts  AktrElement.ts  AktrEvent.ts  AktrResult.ts  AktrRouter.ts  AktrService.ts
client/service/: ServiceForm.ts  ServiceLoader.ts  ServiceNav.ts  ServiceOverlay.ts
src/: __init__.py  cfa_location.py  components.tsx  const.ts  data_cfa_location.py  data_employee.py  db.py  db_sqlite.py  employee.py  handlers.tsx  main.rs  middleware.py  middleware.ts  pages.tsx  parse.py  sqlite_db.py
src/bots/: __init__.py  birthday_bot.py
src/component/: form.rs  header.rs  layout.rs  misc.rs  mod.rs  nav.rs
src/config/: AppConfig.py
src/context/: __init__.py  depend_context.py
src/db/: DataCfaLocation.py  DataEmployee.py  DataSession.py  Employee.py  Location.py  Session.py  __init__.py
src/err/: PyErr.py
src/form/: login.go
src/log/: __init__.py
src/middleware/: __init__.py  auth.rs  log.rs  mod.rs  (+1 more)
static/: output.css
templates/: layout_admin.html  layout_app.html  layout_guest.html  page_admin_cfa_location.html  page_admin_cfa_locations.html  page_admin_employee.html  page_admin_employees.html  page_admin_home.html  page_app_employees.html  page_app_home.html  page_app_locations.html  page_app_time_punch.html  page_err.html  page_guest_home.html
(+50 files in other folders)
